[v7.0] Temporary compressed bucket inconsistency during logical initial sync causing crash

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.35
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v7.0
    • Storage Execution 2026-03-30, Storage Execution 2026-04-13, Storage Execution 2026-04-27, Storage Execution 2026-05-11
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Logical initial sync can cause a temporary timeseries bucket inconsistency: Buckets contain a version indicating uncompressed, but the data also includes some compressed columns. 

      This can happen if the cloning phase of initial sync clones a compressed bucket, but the initial bucket insert is discovered during oplog application. Initial sync has an upsert behavior, which can create a bucket with mixed compressed and uncompressed columns.

      1. Bucket is cloned as compressed v=2 bucket. It contains columns A, B and C.
      2. Oplog application discovers the original bucket insert and upgrade this to an upsert. When the bucket was originally inserted it only had columns A and B.
      
      The upsert results in a bucket with the following properties:
      version=1
      A & B columns are uncompressed
      C column is compressed.
      
      For this to be possible, additional columns must be added by the workload after the initial bucket insert.

      Key generation for 2dsphere_bucket index consults the bucket version to determine if it should use the compressed or uncompressed code path and only handles the expected column type.

      The problem does not exist on v8.0 as buckets are always in the compressed format.

            Assignee:
            Malik Endsley (Inactive)
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: