SERVER-121132: Allow key generation to tolerate buckets with both compressed an uncompressed columns in specific scenarios (#50673)

Co-authored-by: Benjamin Pearce <benjamin.pearce@mongodb.com>
GitOrigin-RevId: 33aa60231266ed8d4cdbc79c80ee0a947fc163bc